--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --card-height: 500px;
+  --card-height: 450px;
   --card-width: calc(var(--card-height) / 1.5);
 }
 
@@ -26,9 +26,11 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  padding: 0 30px;
+  padding: 0 36px;
   perspective: 2500px;
   margin: 40px 50px;
+  margin-top: 40px;
+  margin-top: 100px;
 }
 
 .wrapper {
@@ -90,7 +92,7 @@
 }
 
 .title {
-  width: 250px;
+  width: 180px;
   margin-bottom: 20px;
   transition: transform 0.5s, width 0.5s;
   margin-left: auto;
@@ -112,7 +114,7 @@
 }
 
 img[alt="JUMANJI Characters"] {
-  width: 500px;
+  width: 355px;
   position: relative;
   margin-left: auto;
   margin-bottom: -75px;
