--- a/styles.css
+++ b/styles.css
@@ -1,134 +1,664 @@
-:root {
-  --card-height: 450px;
-  --card-width: calc(var(--card-height) / 1.5);
-}
-
 * {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
-.container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
-  background-image: url(Assets/jumanji-bg.jpg);
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    :root {
+        --card-height: 450px;
+        --card-width: calc(var(--card-height) / 2);
+      }
+    
+      .container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+        background-image: url(Assets/jumanji-bg.jpg);
+      }
+    
+      .card {
+        width: var(--card-width);
+        height: var(--card-height);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 0 36px;
+        perspective: 2500px;
+        margin: 40px 50px;
+        margin-top: 40px;
+        margin-top: 100px;
+      }
+    
+      .wrapper {
+        transition: all 0.5s;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+      }
+    
+      .card:hover .wrapper {
+        transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+        box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+      }
+    
+      .wrapper::before,
+      .wrapper::after {
+        content: "";
+        opacity: 0;
+        width: 100%;
+        height: 80px;
+        transition: all 0.5s;
+        position: absolute;
+        left: 0;
+      }
+    
+      .wrapper::before {
+        top: 0;
+        height: 100%;
+        background-image: linear-gradient(
+          to top,
+          transparent 46%,
+          rgba(12, 13, 19, 0.5) 68%,
+          rgba(12, 13, 19) 97%
+        );
+      }
+    
+      .wrapper::after {
+        bottom: 0;
+        opacity: 1;
+        background-image: linear-gradient(
+          to bottom,
+          transparent 46%,
+          rgba(12, 13, 19, 0.5) 68%,
+          rgba(12, 13, 19) 97%
+        );
+      }
+    
+      .card:hover .wrapper::before,
+      .wrapper::after {
+        opacity: 1;
+      }
+    
+      .card:hover .wrapper::after {
+        height: 120px;
+      }
+    
+      .title {
+        width: 185px;
+        margin-bottom: 20px;
+        transition: transform 0.5s, width 0.5s;
+        margin-left: auto;
+        margin-right: auto;
+        position: absolute;
+      }
+    
+      .card:hover .title {
+        transform: translate3d(0%, -50px, 100px);
+        width: 300px;
+      }
+    
+      .character {
+        width: 330px;
+        opacity: 0;
+        transition: all 0.3s;
+        position: absolute;
+        z-index: -1;
+      }
+    
+      img[alt="JUMANJI Characters"] {
+        width: 340px;
+        position: relative;
+        margin-left: auto;
+        margin-bottom: -80px;
+      }
+    
+      .cover-image {
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        object-fit: cover;
+      }
+    
+      .card:hover .character {
+        opacity: 1;
+        transform: translate3d(0%, -30%, 100px);
+        transition: all 0.3s;
+      }
 }
 
-.card {
-  width: var(--card-width);
-  height: var(--card-height);
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  padding: 0 36px;
-  perspective: 2500px;
-  margin: 40px 50px;
-  margin-top: 40px;
-  margin-top: 100px;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  :root {
+    --card-height: 450px;
+    --card-width: calc(var(--card-height) / 1.5);
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(Assets/jumanji-bg.jpg);
+  }
+
+  .card {
+    width: var(--card-width);
+    height: var(--card-height);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 0 36px;
+    perspective: 2500px;
+    margin: 40px 50px;
+    margin-top: 40px;
+    margin-top: 100px;
+  }
+
+  .wrapper {
+    transition: all 0.5s;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .card:hover .wrapper {
+    transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+    box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+  }
+
+  .wrapper::before,
+  .wrapper::after {
+    content: "";
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    transition: all 0.5s;
+    position: absolute;
+    left: 0;
+  }
+
+  .wrapper::before {
+    top: 0;
+    height: 100%;
+    background-image: linear-gradient(
+      to top,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
+
+  .wrapper::after {
+    bottom: 0;
+    opacity: 1;
+    background-image: linear-gradient(
+      to bottom,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
+
+  .card:hover .wrapper::before,
+  .wrapper::after {
+    opacity: 1;
+  }
+
+  .card:hover .wrapper::after {
+    height: 120px;
+  }
+
+  .title {
+    width: 185px;
+    margin-bottom: 20px;
+    transition: transform 0.5s, width 0.5s;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+  }
+
+  .card:hover .title {
+    transform: translate3d(0%, -50px, 100px);
+    width: 300px;
+  }
+
+  .character {
+    width: 330px;
+    opacity: 0;
+    transition: all 0.3s;
+    position: absolute;
+    z-index: -1;
+  }
+
+  img[alt="JUMANJI Characters"] {
+    width: 340px;
+    position: relative;
+    margin-left: auto;
+    margin-bottom: -80px;
+  }
+
+  .cover-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .card:hover .character {
+    opacity: 1;
+    transform: translate3d(0%, -30%, 100px);
+    transition: all 0.3s;
+  }
 }
 
-.wrapper {
-  transition: all 0.5s;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  :root {
+    --card-height: 450px;
+    --card-width: calc(var(--card-height) / 1.5);
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(Assets/jumanji-bg.jpg);
+  }
+
+  .card {
+    width: var(--card-width);
+    height: var(--card-height);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 0 36px;
+    perspective: 2500px;
+    margin: 40px 50px;
+    margin-top: 40px;
+    margin-top: 100px;
+  }
+
+  .wrapper {
+    transition: all 0.5s;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .card:hover .wrapper {
+    transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+    box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+  }
+
+  .wrapper::before,
+  .wrapper::after {
+    content: "";
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    transition: all 0.5s;
+    position: absolute;
+    left: 0;
+  }
+
+  .wrapper::before {
+    top: 0;
+    height: 100%;
+    background-image: linear-gradient(
+      to top,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
+
+  .wrapper::after {
+    bottom: 0;
+    opacity: 1;
+    background-image: linear-gradient(
+      to bottom,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
+
+  .card:hover .wrapper::before,
+  .wrapper::after {
+    opacity: 1;
+  }
+
+  .card:hover .wrapper::after {
+    height: 120px;
+  }
+
+  .title {
+    width: 185px;
+    margin-bottom: 20px;
+    transition: transform 0.5s, width 0.5s;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+  }
+
+  .card:hover .title {
+    transform: translate3d(0%, -50px, 100px);
+    width: 300px;
+  }
+
+  .character {
+    width: 330px;
+    opacity: 0;
+    transition: all 0.3s;
+    position: absolute;
+    z-index: -1;
+  }
+
+  img[alt="JUMANJI Characters"] {
+    width: 340px;
+    position: relative;
+    margin-left: auto;
+    margin-bottom: -80px;
+  }
+
+  .cover-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .card:hover .character {
+    opacity: 1;
+    transform: translate3d(0%, -30%, 100px);
+    transition: all 0.3s;
+  }
 }
 
-.card:hover .wrapper {
-  transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
-  box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  :root {
+    --card-height: 450px;
+    --card-width: calc(var(--card-height) / 1.5);
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(Assets/jumanji-bg.jpg);
+  }
+
+  .card {
+    width: var(--card-width);
+    height: var(--card-height);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 0 36px;
+    perspective: 2500px;
+    margin: 40px 50px;
+    margin-top: 40px;
+    margin-top: 100px;
+  }
+
+  .wrapper {
+    transition: all 0.5s;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .card:hover .wrapper {
+    transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+    box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+  }
+
+  .wrapper::before,
+  .wrapper::after {
+    content: "";
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    transition: all 0.5s;
+    position: absolute;
+    left: 0;
+  }
+
+  .wrapper::before {
+    top: 0;
+    height: 100%;
+    background-image: linear-gradient(
+      to top,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
+
+  .wrapper::after {
+    bottom: 0;
+    opacity: 1;
+    background-image: linear-gradient(
+      to bottom,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
+
+  .card:hover .wrapper::before,
+  .wrapper::after {
+    opacity: 1;
+  }
+
+  .card:hover .wrapper::after {
+    height: 120px;
+  }
+
+  .title {
+    width: 185px;
+    margin-bottom: 20px;
+    transition: transform 0.5s, width 0.5s;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+  }
+
+  .card:hover .title {
+    transform: translate3d(0%, -50px, 100px);
+    width: 300px;
+  }
+
+  .character {
+    width: 330px;
+    opacity: 0;
+    transition: all 0.3s;
+    position: absolute;
+    z-index: -1;
+  }
+
+  img[alt="JUMANJI Characters"] {
+    width: 340px;
+    position: relative;
+    margin-left: auto;
+    margin-bottom: -80px;
+  }
+
+  .cover-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .card:hover .character {
+    opacity: 1;
+    transform: translate3d(0%, -30%, 100px);
+    transition: all 0.3s;
+  }
 }
 
-.wrapper::before,
-.wrapper::after {
-  content: "";
-  opacity: 0;
-  width: 100%;
-  height: 80px;
-  transition: all 0.5s;
-  position: absolute;
-  left: 0;
-}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  :root {
+    --card-height: 450px;
+    --card-width: calc(var(--card-height) / 1.5);
+  }
+  .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(Assets/jumanji-bg.jpg);
+  }
 
-.wrapper::before {
-  top: 0;
-  height: 100%;
-  background-image: linear-gradient(
-    to top,
-    transparent 46%,
-    rgba(12, 13, 19, 0.5) 68%,
-    rgba(12, 13, 19) 97%
-  );
-}
+  .card {
+    width: var(--card-width);
+    height: var(--card-height);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 0 36px;
+    perspective: 2500px;
+    margin: 40px 50px;
+    margin-top: 40px;
+    margin-top: 100px;
+  }
 
-.wrapper::after {
-  bottom: 0;
-  opacity: 1;
-  background-image: linear-gradient(
-    to bottom,
-    transparent 46%,
-    rgba(12, 13, 19, 0.5) 68%,
-    rgba(12, 13, 19) 97%
-  );
-}
+  .wrapper {
+    transition: all 0.5s;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
 
-.card:hover .wrapper::before,
-.wrapper::after {
-  opacity: 1;
-}
+  .card:hover .wrapper {
+    transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
+    box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
+  }
 
-.card:hover .wrapper::after {
-  height: 120px;
-}
+  .wrapper::before,
+  .wrapper::after {
+    content: "";
+    opacity: 0;
+    width: 100%;
+    height: 80px;
+    transition: all 0.5s;
+    position: absolute;
+    left: 0;
+  }
 
-.title {
-  width: 185px;
-  margin-bottom: 20px;
-  transition: transform 0.5s, width 0.5s;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-}
+  .wrapper::before {
+    top: 0;
+    height: 100%;
+    background-image: linear-gradient(
+      to top,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
 
-.card:hover .title {
-  transform: translate3d(0%, -50px, 100px);
-  width: 300px;
-}
+  .wrapper::after {
+    bottom: 0;
+    opacity: 1;
+    background-image: linear-gradient(
+      to bottom,
+      transparent 46%,
+      rgba(12, 13, 19, 0.5) 68%,
+      rgba(12, 13, 19) 97%
+    );
+  }
 
-.character {
-  width: 330px;
-  opacity: 0;
-  transition: all 0.3s;
-  position: absolute;
-  z-index: -1;
-}
+  .card:hover .wrapper::before,
+  .wrapper::after {
+    opacity: 1;
+  }
 
-img[alt="JUMANJI Characters"] {
-  width: 355px;
-  position: relative;
-  margin-left: auto;
-  margin-bottom: -75px;
-}
+  .card:hover .wrapper::after {
+    height: 120px;
+  }
 
-.cover-image {
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  object-fit: cover;
-}
+  .title {
+    width: 185px;
+    margin-bottom: 20px;
+    transition: transform 0.5s, width 0.5s;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+  }
 
-.card:hover .character {
-  opacity: 1;
-  transform: translate3d(0%, -30%, 100px);
-  transition: all 0.3s;
+  .card:hover .title {
+    transform: translate3d(0%, -50px, 100px);
+    width: 300px;
+  }
+
+  .character {
+    width: 330px;
+    opacity: 0;
+    transition: all 0.3s;
+    position: absolute;
+    z-index: -1;
+  }
+
+  img[alt="JUMANJI Characters"] {
+    width: 355px;
+    position: relative;
+    margin-left: auto;
+    margin-bottom: -75px;
+  }
+
+  .cover-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .card:hover .character {
+    opacity: 1;
+    transform: translate3d(0%, -30%, 100px);
+    transition: all 0.3s;
+  }
 }
